feat: prepare for cloud deployment - update datasource env vars and CORS config