@@ -70,7 +70,11 @@ public class SecurityConfig {
         org.springframework.web.cors.CorsConfiguration configuration = new org.springframework.web.cors.CorsConfiguration();
         
         // Chỉ định đích danh duy nhất Domain Frontend của mày, cấm tuyệt đối dùng dấu "*"
-        configuration.setAllowedOrigins(java.util.List.of("http://localhost:5173"));
+        configuration.setAllowedOrigins(java.util.Arrays.asList(
+            "http://localhost:5173",
+            "https://job-platform.vercel.app",      // URL chính thức trên Vercel (cập nhật lại sau khi deploy)
+            "https://job-platform-fe.vercel.app"    // URL dự phòng Vercel
+        ));
         
         // Cho phép nhận diện đầy đủ các phương thức và mọi Header truyền lên từ Axios Frontend
         configuration.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
